Implement api endpoints

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!--JDBC MySQL connector-->
         <dependency>
             <groupId>mysql</groupId>
