--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,18 +9,23 @@ logging.level.org.hibernate.SQL = info
 # = DATA SOURCE
 # ===============================
 # Connection url for the database
-# without verifying DB identity nor using or requiring SSL
-spring.datasource.url = jdbc:mysql://localhost:3308/ote-webapp-mysql?\
-  allowPublicKeyRetrieval=true&\
-  verifyServerCertificate=false&\
-  useSSL=false&\
-  requireSSL=false
-# Username and password
-spring.datasource.username = user
-spring.datasource.password = password
+## without verifying DB identity nor using or requiring SSL
+#spring.datasource.url = jdbc:mysql://localhost:3308/ote-webapp-mysql?\
+#  allowPublicKeyRetrieval=true&\
+#  verifyServerCertificate=false&\
+#  useSSL=false&\
+#  requireSSL=false
+## Username and password
+#spring.datasource.username = user
+#spring.datasource.password = password
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ote-webapp-mysql
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.datasource.hikari.maximum-pool-size=30
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
