--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,18 +54,23 @@ logging.level.org.hibernate.SQL = info
 # ===============================
 # Connection url for the database
 # without verifying DB identity nor using or requiring SSL
-spring.datasource.url = jdbc:mysql://localhost:3308/ote-webapp-mysql?\
-  allowPublicKeyRetrieval=true&\
-  verifyServerCertificate=false&\
-  useSSL=false&\
-  requireSSL=false
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost:3308/ote-webapp-mysql?\
+#  allowPublicKeyRetrieval=true&\
+#  verifyServerCertificate=false&\
+#  useSSL=false&\
+#  requireSSL=false
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+#
+## Username and password
+##spring.datasource.username = postgres1
+##spring.datasource.password = postgres1
+#spring.datasource.username = user
+#spring.datasource.password = password
 
-# Username and password
-#spring.datasource.username = postgres1
-#spring.datasource.password = postgres1
-spring.datasource.username = user
-spring.datasource.password = password
+spring.datasource.url=jdbc:postgresql://postgres:5432/ote-webapp-mysql
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 # Populate the database using 'schema.sql' and 'data.sql'.
 spring.datasource.initialization-mode = NEVER
@@ -98,7 +103,7 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update, validate): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 # Naming strategy
 # way too advanced configuration for the purpose of this course
